# pointplayer

./: CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cpp  MainWindow.h  PlotWidget.cpp  PlotWidget.h  PointGenerator.cpp  PointGenerator.h  main.cpp
